conversion and benchmark (#14)
We now get a command-line utility to convert odbv1 to odbv2 files (no schema needed on either side). We get support for loading odbv2 graphs with unknown schema. We get benchmarks for loading odbv2 graphs with unknown schema.